# ielts-platform

./: .dockerignore  .env.production.example  .gitignore  AI_CONTEXT.md  PROJECT_SPEC.md  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/core/: __init__.py  audio.py  config.py  database.py  dependencies.py  exceptions.py  security.py  storage.py
backend/app/models/: __init__.py  activity.py  favorite.py  practice.py  question.py  user.py
backend/app/modules/: __init__.py
backend/migrations/: env.py
backend/migrations/versions/: 20260723_001_create_roles.py  20260723_002_create_users.py  20260723_003_create_user_profiles.py  20260723_004_create_user_goals.py  20260723_005_create_speaking_topics.py  20260723_006_create_tags.py  20260723_007_create_speaking_questions.py  20260723_008_create_question_tags.py  20260723_009_create_favorites.py  20260723_010_create_practice_sessions.py  20260723_011_create_practice_session_questions.py  20260723_012_create_practice_attempts.py  20260723_013_create_recordings.py  20260723_014_create_study_records.py  (+3 more)
backend/scripts/: seed_admin.py
backend/tests/: test_admin_dashboard.py  test_admin_questions.py  test_admin_topics_tags.py  test_admin_users.py  test_auth_login.py  test_auth_logout.py  test_auth_register.py  test_health.py  test_home.py  test_learning.py  test_practice.py  test_questions.py  test_users_goals.py  test_users_service.py
docs/: deploy.md  (+1 more)
(+102 files in other folders)
